Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -477,11 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = ''"
+    "recoleta_marker = None"
    ]
   },
   {
