Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -477,11 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = '-34.5895, -58.3974'"
+    "recoleta_marker = ''"
    ]
   },
   {
